[package]
name = "Nano"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
tempfile = "3"

[dependencies]
directories = "6.0.0"
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json", "ansi","time"] }
tracing = "0.1.41"
num_cpus = "1.17.0"

rusqlite = "0.36.0"

ignore = "0.4.23"
tree-sitter = "0.25.6"
tree-sitter-rust = "0.24.0"
crossbeam-channel = "0.5.15"
blake3 = "1.8.2"
filetime = "0.2.25"
